# rust-http-gql-server

./: README.md
gql-api/: Cargo.toml  Dockerfile  README.md  build.rs  commands.sh  config.toml  entrypoint.sh  rustfmt-unstable.toml
gql-api/diesel/: Dockerfile  commands.sh  entrypoint.sh
gql-api/diesel/migrations/2022-03-15-00000_users/: up.sql
gql-api/diesel/migrations/2022-03-15-00001_events/: up.sql
gql-api/diesel/migrations/2022-04-15-00002_asset_files/: down.sql  up.sql
gql-api/diesel/migrations/2022-04-15-00003_sessions/: up.sql
gql-api/diesel/migrations/2022-04-15-00004_tickets/: down.sql  up.sql
gql-api/diesel/migrations/2022-04-15-00005_ticket_reservations/: down.sql  up.sql
gql-api/diesel/migrations/2022-04-15-00006_buyer_signup_session/: down.sql  up.sql
gql-api/diesel/migrations/2022-04-15-00007_buyer_recovery_session/: down.sql  up.sql
gql-api/diesel/migrations/2022-04-15-00008_block_pointer/: down.sql  up.sql
gql-api/diesel/migrations/2022-04-15-00009_sc_events/: down.sql  up.sql
gql-api/schemas/: schema.graphql
gql-api/src/: auth.rs  config.rs  error.rs  filters.rs  grpc.rs  lib.rs  migrations.rs
gql-api/src/db/: models.rs  sql.rs
gql-api/src/gql/: error.rs  filters.rs  handlers.rs  mod.rs  models.rs  mutations.rs  quiries.rs  routes.rs  schema.rs  schema_language.rs  subscriptions.rs  validations.rs
gql-api/src/http/: handlers.rs  models.rs  routes.rs
gql-api/src/security/: aes.rs  crypto.rs  mod.rs  password.rs
gql-api/tests/: asset.rs  common.rs  config.rs  lib.rs
